; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/extr_video_crt_switch.c_switch_crt_hz.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/extr_video_crt_switch.c_switch_crt_hz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ra_core_hz = common dso_local global i32 0, align 4
@ra_tmp_core_hz = common dso_local global i32 0, align 4
@ra_set_core_hz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @switch_crt_hz to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @switch_crt_hz() #0 {
  %1 = load i32, i32* @ra_core_hz, align 4
  %2 = load i32, i32* @ra_tmp_core_hz, align 4
  %3 = icmp eq i32 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %47

5:                                                ; preds = %0
  %6 = load i32, i32* @ra_core_hz, align 4
  %7 = icmp slt i32 %6, 100
  br i1 %7, label %8, label %24

8:                                                ; preds = %5
  %9 = load i32, i32* @ra_core_hz, align 4
  %10 = icmp slt i32 %9, 53
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 50, i32* @ra_set_core_hz, align 4
  br label %12

12:                                               ; preds = %11, %8
  %13 = load i32, i32* @ra_core_hz, align 4
  %14 = icmp sge i32 %13, 53
  br i1 %14, label %15, label %19

15:                                               ; preds = %12
  %16 = load i32, i32* @ra_core_hz, align 4
  %17 = icmp slt i32 %16, 57
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 55, i32* @ra_set_core_hz, align 4
  br label %19

19:                                               ; preds = %18, %15, %12
  %20 = load i32, i32* @ra_core_hz, align 4
  %21 = icmp sge i32 %20, 57
  br i1 %21, label %22, label %23

22:                                               ; preds = %19
  store i32 60, i32* @ra_set_core_hz, align 4
  br label %23

23:                                               ; preds = %22, %19
  br label %24

24:                                               ; preds = %23, %5
  %25 = load i32, i32* @ra_core_hz, align 4
  %26 = icmp sgt i32 %25, 100
  br i1 %26, label %27, label %43

27:                                               ; preds = %24
  %28 = load i32, i32* @ra_core_hz, align 4
  %29 = icmp slt i32 %28, 106
  br i1 %29, label %30, label %31

30:                                               ; preds = %27
  store i32 120, i32* @ra_set_core_hz, align 4
  br label %31

31:                                               ; preds = %30, %27
  %32 = load i32, i32* @ra_core_hz, align 4
  %33 = icmp sge i32 %32, 106
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i32, i32* @ra_core_hz, align 4
  %36 = icmp slt i32 %35, 114
  br i1 %36, label %37, label %38

37:                                               ; preds = %34
  store i32 110, i32* @ra_set_core_hz, align 4
  br label %38

38:                                               ; preds = %37, %34, %31
  %39 = load i32, i32* @ra_core_hz, align 4
  %40 = icmp sge i32 %39, 114
  br i1 %40, label %41, label %42

41:                                               ; preds = %38
  store i32 120, i32* @ra_set_core_hz, align 4
  br label %42

42:                                               ; preds = %41, %38
  br label %43

43:                                               ; preds = %42, %24
  %44 = load i32, i32* @ra_set_core_hz, align 4
  %45 = call i32 @video_monitor_set_refresh_rate(i32 %44)
  %46 = load i32, i32* @ra_core_hz, align 4
  store i32 %46, i32* @ra_tmp_core_hz, align 4
  br label %47

47:                                               ; preds = %43, %4
  ret void
}

declare dso_local i32 @video_monitor_set_refresh_rate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
